# fields

./: .gitignore  README.md  conftest.py  pyproject.toml  setup.py
physfields/: __init__.py  scalarfield.py  vectorfield.py  zernike.py
physics-fields/: __init__.py  vectorfield.py
src/physfields/: field.py  vectorfield.py  zernike.py
tests/: test_scalar.py  test_vector.py  test_zernike.py
