[tool.poetry]
name = "physics-fields"
version = "0.1.0"
description = "A minimalistic package for manipulating scalar and vector fields."
authors = ["Martin Baláž <martin.balaz@trojsten.sk>"]
readme = "README.md"
packages = [
    { include = "physfields" },
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "*"
scipy = "*"
matplotlib = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
